# codex-cli-mobile-bridge

./: .dockerignore  .env.example  .gitignore  :memory:  AGENTS.md  LICENSE  README.md  check_git_https_snap.sh  codex-bridge.yaml  docker-compose.yml  main.py  pyproject.toml
.sdd/: context-index.yaml  diagram-index.yaml  module-index.yaml  spec-index.yaml
architecture/: classes.mmd  classes.yaml  components.mmd  components.yaml  deployment.mmd  deployment.yaml  entity-relationship.mmd  entity-relationship.yaml  sdd-sequence.mmd  sdd-sequence.yaml  use-cases.mmd  use-cases.yaml
backend/: Dockerfile  __init__.py
design/: codex-mobile-ux-board.html
docs/: app-updater-implementation-brief.md  audio-session-export-and-identification.md  bridge-controlled-app-updater-plan.md  check_git_https_snap.schema.json  codex-bridge-sdd-architecture.md  dev-prod-stage-promotion-pipeline.md  developer-feedback-app-onboarding.md  developer-feedback-template-refactor-plan.md  developer-feedback-v0.3.md  fanout-release.md  git_https_snap_operation.schema.json  onenote-skill-investigation.md  sebastian-secondary-bridge-setup.md  setup_git_https_snap_check.schema.json  web-preview-email-ses.md  workbench-sdd-adoption.md  xr18-control-app-validation-plan.md
mcp_apps/: __init__.py
scripts/: __init__.py  backend_process_lib.sh  check_git_https_snap.sh  check_git_https_snap_lib.sh  codex_bridge_sdd_backfill.py  codex_bridge_sdd_doctor.py  codex_bridge_sdd_sat_adopt.py  configure_tailscale_serve.sh  dev_backend_8118.sh  developer_feedback_integration.py  environment_guard.py  install_android_update.sh  install_boot_services.sh  install_user_services.sh  lint_git_https_snap_shell.sh  load_bridge_env.sh  publish_android_release.sh  (+19 more)
(+1251 files in other folders)
