[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-cli-mobile-bridge"
version = "0.1.0"
description = "Remote-control a local Codex CLI from a mobile chat frontend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2,<2.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "uvicorn[standard]>=0.35,<1.0",
    "mcp>=1,<2",
    "pypdf>=5,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.8,<1.0",
]
speech = [
    "kokoro>=0.9.4,<1.0",
    "soundfile>=0.13,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["backend*"]
